site navbar bottom margin increased to fix on smaller screens

--- a/osafw-app/wwwroot/assets/css/site.css
+++ b/osafw-app/wwwroot/assets/css/site.css
@@ -377,7 +377,7 @@ body.fwlayout-fluid {
   .fwlayout-fluid .sidebar-nav{
     position: -webkit-sticky;
     position: sticky;
-    height: calc(100vh - 48px);
+    height: calc(100vh - 80px);
     overflow-x: hidden;
     overflow-y: auto;
     padding: 5px 0;
